Initial Submission (without Netlify)

--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>About Us | Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -42,11 +43,11 @@
       <div class="col-12 col-md-7">
         <h2>The Business</h2>
         <p>The Quilting Bee specializes in finishing your quilt tops! We offer longarm machine quilting services, quilt binding, and carry products you may need to finish your quilt. We carry batting, backing fabrics and blender fabrics. We also carry finished quilts for those who may not want to make their own quilts.</p>
-        <img src="images/about-quilt.jpg" alt="Green square quilt" class="cover w-100 d-md-none mt-3 mb-4">
+        <img src="images/about_quilt.jpg" alt="Green square quilt" class="cover w-100 d-md-none mt-3 mb-4">
         <p>The Quilting Bee is also located on the basement level of the Winward Building at <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank">110 E Main Street, Wellsville, UT 84339</a></p>
       </div>
       <div class="col-12 col-md-5">
-        <img src="images/about-quilt.jpg" alt="Green square quilt" class="cover w-100 h-100 d-none d-md-block">
+        <img src="images/about_quilt.jpg" alt="Green square quilt" class="cover w-100 h-100 d-none d-md-block">
       </div>
     </div>
 
