--- a/src/contact.html
+++ b/src/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Us | Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -50,9 +51,9 @@
         <img src="images/contact.jpg" alt="Phone and email" class="cover w-100">
       </div>
     </div>
-    <!-- It would be fun to have the brand bee holding a phone here instead -->
+    <!-- It would be fun to have the bee holding a phone here instead -->
 
-
+<!-- In the future: figure out how/if I can change the default tooltip if not all fields are filled in or correct -->
     <h2 class="mb-4">Send a message:</h2>
     <form class="row">
       <div class="col-12 col-lg-6">
