--- a/src/gallery.html
+++ b/src/gallery.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gallery | Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -35,8 +36,26 @@
       </div>
     </div>
   </nav>
-  <h1>Gallery</h1>
-  <p>desktop:3 tablet:2 phone:1</p>
+
+<!-- Future Idea (given we have pictures) to pop up with bigger image and closeup of the stitching, along with name of stitching -->
+ <!-- ORR have the closeup as the thumbnail, hover shows name of stitching, view full quilt if clicked on -->
+  <main class="container my-container mt-5 mb-5" id="gallery">
+    <h1 class="purple-heading mb-5">Gallery</h1>
+    <div class="row gy-4">
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/1.jpg" alt="White and green diamond quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/2.jpg" alt="Red and blue diamond quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/3.jpg" alt="Baby quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/4.jpg" alt="Blue and white wave quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/5.jpg" alt="Squares quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/6.jpg" alt="Modern diamond quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/7.jpg" alt="Modern thin stripes quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/8.jpg" alt="Blue and white diamond square quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/9.jpg" alt="Green and blue square quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/10.jpg" alt="Blue stars quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/11.jpg" alt="Alternative diamond quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/12.jpg" alt="Orange and green pinwheel quilt"></div>
+    </div>
+  </main>
 
 
   <footer class="container-fluid">
