--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>The Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -67,7 +68,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/stitches/swirl-flower.jpg" class="d-block" alt="Quilt with swirls and flowers stitch">
+              <img src="images/stitches/swirl_flower.jpg" class="d-block" alt="Quilt with swirls and flowers stitch">
               <div class="carousel-caption d-md-block">
                 <h5>Swirls and Flowers Stitch</h5>
               </div>
