--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Privacy Policy | Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -40,7 +41,7 @@
   <main class="container my-container mt-5" id="privacy">
     <div class="privacy-section">
       <h1 class="purple-heading">Privacy Policy</h1>
-      <p>This privacy notice discloses the privacy practices for www.quilting-bee.com. This privacy notice applies solely to information collected by this website. It will notify you of the following:</p>
+      <p>This privacy notice discloses the privacy practices for The Quilting Bee in Wellsville. This privacy notice applies solely to information collected by this website. It will notify you of the following:</p>
         <ol>
             <li>What personally identifiable information is collected from you through the website, how it is used and with whom it may be shared.</li>
             <li>What choices are available to you regarding the use of your data.</li>
