--- a/src/services_pricing.html
+++ b/src/services_pricing.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Services and Pricing | Quilting Bee</title>
+  <link rel="icon" type="image/x-icon" href="images/bee_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="The Quilting Bee">
@@ -45,7 +46,7 @@
       <h2>Freehand Overall Quilting &#40;edge to edge&#41;</h2>
       <p class="service-price">&dollar;.0175 &dash; &dollar;.02 per square inch, with a minimum of $35.</p>
       <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 per square inch.</p>
-      <p>My goal is to reach a fair price for you and me. I time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, I may charge extra.</p>
+      <p>Our goal is to reach a fair price for you and us. We time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, we may charge extra.</p>
     </div>
 
     <div class="service-section">
@@ -60,13 +61,13 @@
         <p class="service-price">&dollar;0.20&#47;inch &dash; Machine bind both sides.</p>
         <p class="service-price">&dollar;0.30&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
       </div>
-      <p>The prices above include me making the binding, but <b>you must give me the fabric</b> to make the binding.</p>
+      <p>The prices above include us making the binding, but <b>you must give us the fabric</b> to make the binding.</p>
     </div>
 
     <div class="service-section">
       <h2>Quilt Top Piecing or Fabric Prep</h2>
       <p class="service-price">&dollar;35&#47;hour.</p>
-      <p>A nice friend or relative of yours will be a better deal for you. However, if you would like me to piece for you, please <a href="contact.html">contact me</a> directly to discuss your project.</p>
+      <p>A nice friend or relative of yours will be a better deal for you. However, if you would like us to piece for you, please <a href="contact.html">contact us</a> directly to discuss your project.</p>
     </div>
 
     <div class="service-section">
