Minor pricing and wording changes requested by client

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,9 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/stitches/swirl_flower.jpg" class="d-block" alt="Quilt with swirls and flowers stitch">
+              <img src="images/stitches/swirl_flower.jpg" class="d-block" alt="Quilt with flowers and swirls stitch">
               <div class="carousel-caption d-md-block">
-                <h5>Swirls and Flowers Stitch</h5>
+                <h5>Flowers and Swirls Stitch</h5>
               </div>
             </div>
             <div class="carousel-item">
@@ -95,7 +95,7 @@
 
   <main class="container my-container" id="home-main">
     <h1 class="purple-heading mb-1">Quality Quilting</h1>
-    <p class="fs-4 mb-5">We provide professional-quality quilting. Aleena is a certified machine quilter with 13 years of experience working with a variety of quilts.</p>
+    <p class="fs-4 mb-5">We provide professional-quality quilting. Aleena has been machine quilting since 2011 and has many years of experience working on a variety of quilts.</p>
     <a href="gallery.html" class="button-regular">See Our Work</a>
   </main>
 
