--- a/src/services_pricing.html
+++ b/src/services_pricing.html
@@ -40,33 +40,33 @@
 
   <main class="container my-container mb-5 mt-5">    
     <h1 class="purple-heading">Quilting Services & Prices</h1>
-    <p class="mb-5">These are all the quilting services Aleena offers, but feel free to pick and choose the ones you want.</p>
+    <p class="mb-5">These are all the quilting services Aleena offers. Feel free to pick and choose the ones you want.</p>
 
     <div class="service-section">
       <h2>Freehand Overall Quilting &#40;edge to edge&#41;</h2>
-      <p class="service-price">&dollar;.0175 &dash; &dollar;.02 per square inch, with a minimum of $35.</p>
-      <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 per square inch.</p>
+      <p class="service-price">&dollar;.0175 &dash; &dollar;.025 per square inch, with a minimum of $40.</p>
+      <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 or &dollar;.025 per square inch.</p>
       <p>Our goal is to reach a fair price for you and us. We time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, we may charge extra.</p>
     </div>
 
     <div class="service-section">
       <h2>Custom Quilting</h2>
-      <p class="service-price">&dollar;35&#47;hour, with a minimum of &dollar;45.</p>
+      <p class="service-price">&dollar;40&#47;hour, with a minimum of &dollar;45.</p>
     </div>
 
     <div class="service-section">
       <h2>Binding</h2>
       <div>
-        <p class="service-price">&dollar;0.15&#47;inch &dash; Machine bind 1 side only.</p>
-        <p class="service-price">&dollar;0.20&#47;inch &dash; Machine bind both sides.</p>
-        <p class="service-price">&dollar;0.30&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
+        <p class="service-price">&dollar;0.175&#47;inch &dash; Machine bind 1 side only.</p>
+        <p class="service-price">&dollar;0.25&#47;inch &dash; Machine bind both sides.</p>
+        <p class="service-price">&dollar;0.40&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
       </div>
-      <p>The prices above include us making the binding, but <b>you must give us the fabric</b> to make the binding.</p>
+      <p>The prices above include us making the binding. You may bring us your own fabric or purchase some from us to make the binding.</p>
     </div>
 
     <div class="service-section">
       <h2>Quilt Top Piecing or Fabric Prep</h2>
-      <p class="service-price">&dollar;35&#47;hour.</p>
+      <p class="service-price">&dollar;40&#47;hour.</p>
       <p>A nice friend or relative of yours will be a better deal for you. However, if you would like us to piece for you, please <a href="contact.html">contact us</a> directly to discuss your project.</p>
     </div>
 
