--- a/src/about.html
+++ b/src/about.html
@@ -19,12 +19,12 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg">
     <div class="container-fluid" id="navContain">
+      <a href="index.html" id="logo" class="me-lg-3">
+        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" id="logo">
-        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
-      </a>
       <div class="collapse navbar-collapse"  id="navbarCollapse">
         <ul class="navbar-nav">
           <li><a href="index.html">Home</a></li>
@@ -39,9 +39,9 @@
 
   <main class="container my-container mt-5" id="about">
     <h1 class="purple-heading">About</h1>
-    <div class="row about-section">
+    <section class="row about-section" aria-labelledby="businessSect">
       <div class="col-12 col-md-7">
-        <h2>The Business</h2>
+        <h2 id="businessSect">The Business</h2>
         <p>The Quilting Bee specializes in finishing your quilt tops! We offer longarm machine quilting services, quilt binding, and carry products you may need to finish your quilt. We carry batting, backing fabrics and blender fabrics. We also carry finished quilts for those who may not want to make their own quilts.</p>
         <img src="images/about_quilt.jpg" alt="Green square quilt" class="cover w-100 d-md-none mt-3 mb-4">
         <p>The Quilting Bee is also located on the basement level of the Winward Building at <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank">110 E Main Street, Wellsville, UT 84339</a></p>
@@ -49,29 +49,29 @@
       <div class="col-12 col-md-5">
         <img src="images/about_quilt.jpg" alt="Green square quilt" class="cover w-100 h-100 d-none d-md-block">
       </div>
-    </div>
+    </section>
 
-    <div class="row about-section">
+    <section class="row about-section" aria-labelledby="ownerSect">
       <div class="col-md-5 col-lg-4 d-none d-md-block">
         <img src="images/aleena.jpg" alt="Portrait of Aleena the quilter" class="cover w-100 h-100">
       </div>
       <div class="col-12 col-md-7 col-lg-8">
-        <h2>The Owner</h2>
+        <h2 id="ownerSect">The Owner</h2>
         <img src="images/aleena.jpg" alt="Portrait of Aleena the quilter" class="d-md-none mt-3 mb-4 w-100">
         <p>Aleena Winward is the owner of The Quilting Bee in Wellsville. She started a machine
           quilting business in her home in 2011 using her Gammill Vision 30-12 for hand-driven machine
           quilting. She is a certified machine quilter with training from Village Dry Goods and Rocky Mountain Electric Quilters. She has enjoyed learning in classes she's taken from many wonderful teachers at local quilt shops and local quilt guilds in Cache Valley. She enjoys free motion quilting overall patterns best.</p>
       </div>
-    </div>
+    </section>
 
-    <div class="row about-section">
-      <h2>The Origins</h2>
+    <section class="row about-section" aria-labelledby="originSect">
+      <h2 id="originSect">The Origins</h2>
       <p>Quilting is part of Aleena's heritage. Her grandma made hundreds of quilts by hand for her family. Grandma taught Aleena about quilting and helped her make her first t-shirt quilt. When Aleena got her longarm quilting machine, she felt as though she had come home and knew grandma must be smiling in Heaven. With the help of her quilting machine, Aleena can quilt more quilts than even grandma had, with sturdier stitches. She owes her love of quilting to grandma!</p>
-    </div>
+    </section>
 
-    <div class="row about-section">
+    <section class="row about-section" aria-labelledby="buildingSect">
       <div class="col-12 col-md-7">
-        <h2>The Winward Building</h2>
+        <h2 id="buildingSect">The Winward Building</h2>
         <img src="images/building_night.jpg" alt="The Winward Building at night" class="col-12 col-md-5 d-md-none mt-3 mb-4">
         <p>Aleena and her husband Sam started The Winward Building in 2018. The building also houses other family businesses:<br>
           <ul id="about-list">
@@ -84,36 +84,29 @@
       <div class="col-12 col-md-5 d-md-block d-none">
         <img src="images/building_night.jpg" alt="The Winward Building at night" class="w-100">
       </div>
-    </div>
-    <!-- <h2>Our Community</h2>
+    </section>
+    <!-- <h2>The Community</h2>
     <p>Wellsville has a population of about 3,600 people. They have harsher winters with lots of snow and cold temperatures, and enjoy beautiful springs, summers and falls. Wellsville is at the base of the Wellsville Mountains, which are the steepest mountains in North America. At the Quilting Bee in Wellsville, we carry t-shirts that say, “I love the Wellsvilles” or for the adventurous, “I hiked the Wellsvilles”.</p> -->
   </main>
 
 
 
   <footer class="container-fluid">
-    <div class="container text-sm-center">
-      <div class="mb-4 row">
+    <div class="container text-center">
+      <div class="row footerMB">
         <div class="col-lg-2 col-xxl-3">
-          <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo" class="d-none d-lg-block" height="80px">
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3 mb-2">
-          <i class="bi bi-telephone me-3"></i>
-          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5">435-245-3978</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-5 col-md-6 col-lg-4 col-xxl-3 mb-2">
+          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5"><i class="bi bi-telephone me-3 footerAlign"></i><span class="footerAlign">435-245-3978</span></a>
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3">
-          <i class="bi bi-buildings me-3"></i>
-          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5">110 E Main Street<br>Wellsville, UT 84339</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-7 col-md-6 col-lg-4 col-xxl-3">
+          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5"><i class="bi bi-buildings me-3"></i><span class="d-inline-block">110 E Main Street<br>Wellsville, UT 84339</span></a>
         </div>
         <div class="col-lg-2 col-xxl-3"></div>
       </div>
-      <a href="privacy_policy.html" class="d-md-none fs-5">Privacy Policy</a>
       <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
-      <div class="row">
-        <a href="privacy_policy.html" class="d-none d-md-inline-block fs-5 col-md-3">Privacy Policy</a>
-        <p class="col-md-6">Website Design by <a href="" target="_blank">Avrey Semadeni</a></p>
-        <div class="col-md-3"></div>
-      </div>
+      <p>Website Design by <a href="https://avrey-semadeni.netlify.app/" target="_blank">Avrey Semadeni<i class="bi bi-box-arrow-up-right fs-5 ms-2"></i></a></p>
+      <a href="privacy_policy.html" class="fs-5">Privacy Policy</a>
     </div>
   </footer>
 
