--- a/src/gallery.html
+++ b/src/gallery.html
@@ -19,12 +19,12 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg">
     <div class="container-fluid" id="navContain">
+      <a href="index.html" id="logo" class="me-lg-3">
+        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" id="logo">
-        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
-      </a>
       <div class="collapse navbar-collapse"  id="navbarCollapse">
         <ul class="navbar-nav">
           <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
  <!-- ORR have the closeup as the thumbnail, hover shows name of stitching, view full quilt if clicked on -->
   <main class="container my-container mt-5 mb-5" id="gallery">
     <h1 class="purple-heading mb-5">Gallery</h1>
-    <div class="row gy-4">
+    <div class="row gy-4" id="galleryContainer">
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/1.jpg" alt="White and green diamond quilt"></div>
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/2.jpg" alt="Red and blue diamond quilt"></div>
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/3.jpg" alt="Baby quilt"></div>
@@ -51,36 +51,34 @@
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/7.jpg" alt="Modern thin stripes quilt"></div>
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/8.jpg" alt="Blue and white diamond square quilt"></div>
       <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/9.jpg" alt="Green and blue square quilt"></div>
-      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/10.jpg" alt="Blue stars quilt"></div>
-      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/11.jpg" alt="Alternative diamond quilt"></div>
-      <div class="col-12 col-md-6 col-lg-4"><img src="images/gallery/12.jpg" alt="Orange and green pinwheel quilt"></div>
+
+      <div class="col-12 col-md-6 col-lg-4 galleryGroup2 d-none"><img src="images/gallery/10.jpg" alt="Blue stars quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4 galleryGroup2 d-none"><img src="images/gallery/11.jpg" alt="Alternative diamond quilt"></div>
+      <div class="col-12 col-md-6 col-lg-4 galleryGroup2 d-none"><img src="images/gallery/12.jpg" alt="Orange and green pinwheel quilt"></div>
+
+      <div class="col-12 text-center my-5" id="galleryMoreContainer">
+        <button class="button-regular" id="galleryMore">More Results</button>
+      </div>
     </div>
   </main>
 
 
   <footer class="container-fluid">
-    <div class="container text-sm-center">
-      <div class="mb-4 row">
+    <div class="container text-center">
+      <div class="row footerMB">
         <div class="col-lg-2 col-xxl-3">
-          <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo" class="d-none d-lg-block" height="80px">
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3 mb-2">
-          <i class="bi bi-telephone me-3"></i>
-          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5">435-245-3978</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-5 col-md-6 col-lg-4 col-xxl-3 mb-2">
+          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5"><i class="bi bi-telephone me-3 footerAlign"></i><span class="footerAlign">435-245-3978</span></a>
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3">
-          <i class="bi bi-buildings me-3"></i>
-          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5">110 E Main Street<br>Wellsville, UT 84339</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-7 col-md-6 col-lg-4 col-xxl-3">
+          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5"><i class="bi bi-buildings me-3"></i><span class="d-inline-block">110 E Main Street<br>Wellsville, UT 84339</span></a>
         </div>
         <div class="col-lg-2 col-xxl-3"></div>
       </div>
-      <a href="privacy_policy.html" class="d-md-none fs-5">Privacy Policy</a>
       <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
-      <div class="row">
-        <a href="privacy_policy.html" class="d-none d-md-inline-block fs-5 col-md-3">Privacy Policy</a>
-        <p class="col-md-6">Website Design by <a href="" target="_blank">Avrey Semadeni</a></p>
-        <div class="col-md-3"></div>
-      </div>
+      <p>Website Design by <a href="https://avrey-semadeni.netlify.app/" target="_blank">Avrey Semadeni<i class="bi bi-box-arrow-up-right fs-5 ms-2"></i></a></p>
+      <a href="privacy_policy.html" class="fs-5">Privacy Policy</a>
     </div>
   </footer>
 
