--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg nav-white">
     <div class="container-fluid" id="navContain">
+      <a href="index.html" id="logo" class="me-lg-3">
+        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" id="logo">
-        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
-      </a>
       <div class="collapse navbar-collapse"  id="navbarCollapse">
         <ul class="navbar-nav">
           <li><a href="index.html" aria-current="page">Home</a></li>
@@ -39,14 +39,15 @@
 
   <header class="container-fluid">
     <div class="row">
-      <div class="col-12 col-md-5" id="hero-intro">
-        <div id="hero-intro-words" class="mb-5 mb-md-0">
-          <h1 class="pb-4">We specialize in finishing your quilts</h1>
+      <section class="col-12" id="hero-intro" aria-label="Introduction">
+        <div id="hero-intro-words" class="mb-4">
+          <p class="pb-4">We specialize in finishing your quilts</p>
           <a href="contact.html" class="button-regular">Contact Us</a>
         </div>
-      </div>
+      </section>
       <!-- Carousel -->
-      <div class="col-12 col-md-7" id="quiltCarousel">
+       <!-- col-12 col-md-7 -->
+      <section class="col-12" id="quiltCarousel" aria-label="Featured Quilts Carousel">
         <div id="featuredQuilts" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#featuredQuilts" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,28 +59,29 @@
             <div class="carousel-item active">
               <img src="images/stitches/meander.jpg" class="d-block" alt="Quilt with meander stitch">
               <div class="carousel-caption d-md-block">
-                <h5>Meandering Stitch</h5>
+                <p>Meandering Stitch</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/stitches/swirls.jpg" class="d-block" alt="Quilt with swirls stitch">
               <div class="carousel-caption d-md-block">
-                <h5>Swirls Stitch</h5>
+                <p>Swirls Stitch</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/stitches/swirl_flower.jpg" class="d-block" alt="Quilt with flowers and swirls stitch">
               <div class="carousel-caption d-md-block">
-                <h5>Flowers and Swirls Stitch</h5>
+                <p>Flowers and Swirls Stitch</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/stitches/custom1.jpg" class="d-block" alt="Quilt with custom stitching">
               <div class="carousel-caption d-md-block">
-                <h5>Custom Stitch</h5>
+                <p>Custom Stitch</p>
               </div>
             </div>
           </div>
+          <div id="carouselCaptionWhite"></div>
           <button class="carousel-control-prev" type="button" data-bs-target="#featuredQuilts" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -89,41 +91,43 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
+      </section>
+      <!-- <section class="col-12" id="hero-intro" aria-label="Introduction">
+        <div id="hero-intro-words" class="mb-5 mb-md-0">
+          <p class="pb-4">We specialize in finishing your quilts</p>
+          <a href="contact.html" class="button-regular">Contact Us</a>
+        </div>
+      </section> -->
     </div>
   </header>
 
   <main class="container my-container" id="home-main">
     <h1 class="purple-heading mb-1">Quality Quilting</h1>
-    <p class="fs-4 mb-5">We provide professional-quality quilting. Aleena has been machine quilting since 2011 and has many years of experience working on a variety of quilts.</p>
+    <p class="mb-5">We provide professional-quality quilting. Aleena has been machine quilting since 2011 and has many years of experience working on a variety of quilts.</p>
     <a href="gallery.html" class="button-regular">See Our Work</a>
   </main>
 
   <footer class="container-fluid">
-    <div class="container text-sm-center">
-      <div class="mb-4 row">
+    <div class="container text-center">
+      <div class="row footerMB">
         <div class="col-lg-2 col-xxl-3">
-          <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo" class="d-none d-lg-block" height="80px">
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3 mb-2">
-          <i class="bi bi-telephone me-3"></i>
-          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5">435-245-3978</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-5 col-md-6 col-lg-4 col-xxl-3 mb-2">
+          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5"><i class="bi bi-telephone me-3 footerAlign"></i><span class="footerAlign">435-245-3978</span></a>
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3">
-          <i class="bi bi-buildings me-3"></i>
-          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5">110 E Main Street<br>Wellsville, UT 84339</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-7 col-md-6 col-lg-4 col-xxl-3">
+          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5"><i class="bi bi-buildings me-3"></i><span class="d-inline-block">110 E Main Street<br>Wellsville, UT 84339</span></a>
         </div>
         <div class="col-lg-2 col-xxl-3"></div>
       </div>
-      <a href="privacy_policy.html" class="d-md-none fs-5">Privacy Policy</a>
       <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
-      <div class="row">
-        <a href="privacy_policy.html" class="d-none d-md-inline-block fs-5 col-md-3">Privacy Policy</a>
-        <p class="col-md-6">Website Design by <a href="" target="_blank">Avrey Semadeni</a></p>
-        <div class="col-md-3"></div>
-      </div>
+      <p>Website Design by <a href="https://avrey-semadeni.netlify.app/" target="_blank">Avrey Semadeni<i class="bi bi-box-arrow-up-right fs-5 ms-2"></i></a></p>
+      <a href="privacy_policy.html" class="fs-5">Privacy Policy</a>
     </div>
   </footer>
+
+
+<!-- This is awesome modern/quilting mix: https://quiltingismytherapy.com/ -->
 
   <script type="module" src="./javascripts/main.js"></script>
 </body>
