--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -20,12 +20,12 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg">
     <div class="container-fluid" id="navContain">
+      <a href="index.html" id="logo" class="me-lg-3">
+        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" id="logo">
-        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
-      </a>
       <div class="collapse navbar-collapse"  id="navbarCollapse">
         <ul class="navbar-nav">
           <li><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
   </nav>
 
   <main class="container my-container mt-5" id="privacy">
-    <div class="privacy-section">
+    <section class="privacy-section" aria-label="Privacy Policy Introduction">
       <h1 class="purple-heading">Privacy Policy</h1>
       <p>This privacy notice discloses the privacy practices for The Quilting Bee in Wellsville. This privacy notice applies solely to information collected by this website. It will notify you of the following:</p>
         <ol>
@@ -48,63 +48,57 @@
             <li>The security procedures in place to protect the misuse of your information.</li>
             <li>How you can correct any inaccuracies in the information.</li>
         </ol>
-      </div>
+      </section>
 
-      <div class="privacy-section">
-        <h2>Information Collection, Use, and Sharing</h2>
-        <p>We are the sole owners of the information collected on this site. We only have access to/collect information that you voluntarily give us via email or other direct contact from you. We will not sell or rent this information to anyone.</p>
-        <p>We will use your information to respond to you, regarding the reason you contacted us. We will not share your information with any third party outside of our organization, other than as necessary to fulfill your request, e.g. to ship an order.</p>
-        <p>Unless you ask us not to, we may contact you via email in the future to tell you about specials, new products or services, or changes to this privacy policy.</p>
-      </div>
+    <section class="privacy-section" aria-labelledby="informationPolicy">
+      <h2 id="informationPolicy">Information Collection, Use, and Sharing</h2>
+      <p>We are the sole owners of the information collected on this site. We only have access to/collect information that you voluntarily give us via email or other direct contact from you. We will not sell or rent this information to anyone.</p>
+      <p>We will use your information to respond to you, regarding the reason you contacted us. We will not share your information with any third party outside of our organization, other than as necessary to fulfill your request, e.g. to ship an order.</p>
+      <p>Unless you ask us not to, we may contact you via email in the future to tell you about specials, new products or services, or changes to this privacy policy.</p>
+    </section>
 
-      <div class="privacy-section">
-        <h2>Your Access to and Control Over Information</h2>
-        <p>You may opt out of any future contacts from us at any time. You can do the following at any time by contacting us via the email address or phone number given on our website:</p>
-          <ul>
-              <li>See what data we have about you, if any.</li>
-              <li>Change/correct any data we have about you.</li>
-              <li>Have us delete any data we have about you.</li>
-              <li>Express any concern you have about our use of your data.</li>
-          </ul>
-      </div>
+    <section class="privacy-section" aria-labelledby="accessInfo">
+      <h2 id="accessInfo">Your Access to and Control Over Information</h2>
+      <p>You may opt out of any future contacts from us at any time. You can do the following at any time by contacting us via the email address or phone number given on our website:</p>
+        <ul>
+            <li>See what data we have about you, if any.</li>
+            <li>Change/correct any data we have about you.</li>
+            <li>Have us delete any data we have about you.</li>
+            <li>Express any concern you have about our use of your data.</li>
+        </ul>
+    </section>
       
-      <div class="privacy-section">
-        <h2>Security</h2>
-        <p>We take precautions to protect your information. When you submit sensitive information via the website, your information is protected both online and offline.</p>
-        <p>Wherever we collect sensitive information (such as credit card data), that information is encrypted and transmitted to us in a secure way. You can verify this by looking for a lock icon in the address bar and looking for "https" at the beginning of the address of the Web page.</p>
-        <p>While we use encryption to protect sensitive information transmitted online, we also protect your information offline. Only employees who need the information to perform a specific job (for example, billing or customer service) are granted access to personally identifiable information. The computers/servers in which we store personally identifiable information are kept in a secure environment.</p>
-      </div>
-      <div class="privacy-section">
-        <p><strong>If you feel that we are not abiding by this privacy policy, you should contact us immediately via telephone at (435) 245-3978.</strong></p>
-      </div>
-    </main>
+    <section class="privacy-section" aria-labelledby="security">
+      <h2 id="security">Security</h2>
+      <p>We take precautions to protect your information. When you submit sensitive information via the website, your information is protected both online and offline.</p>
+      <p>Wherever we collect sensitive information (such as credit card data), that information is encrypted and transmitted to us in a secure way. You can verify this by looking for a lock icon in the address bar and looking for "https" at the beginning of the address of the Web page.</p>
+      <p>While we use encryption to protect sensitive information transmitted online, we also protect your information offline. Only employees who need the information to perform a specific job (for example, billing or customer service) are granted access to personally identifiable information. The computers/servers in which we store personally identifiable information are kept in a secure environment.</p>
+    </section>
+
+    <section class="privacy-section" aria-label="Note From Owner">
+      <p><strong>If you feel that we are not abiding by this privacy policy, you should contact us immediately via telephone at (435) 245-3978.</strong></p>
+    </section>
+  </main>
 
 
-    <footer class="container-fluid">
-      <div class="container text-sm-center">
-        <div class="mb-4 row">
-          <div class="col-lg-2 col-xxl-3">
-            <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo" class="d-none d-lg-block" height="80px">
-          </div>
-          <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3 mb-2">
-            <i class="bi bi-telephone me-3"></i>
-            <a href="tel:+14352453978" class="footer-contact pt-2 fs-5">435-245-3978</a>
-          </div>
-          <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3">
-            <i class="bi bi-buildings me-3"></i>
-            <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5">110 E Main Street<br>Wellsville, UT 84339</a>
-          </div>
-          <div class="col-lg-2 col-xxl-3"></div>
+  <footer class="container-fluid">
+    <div class="container text-center">
+      <div class="row footerMB">
+        <div class="col-lg-2 col-xxl-3">
         </div>
-        <a href="privacy_policy.html" class="d-md-none fs-5">Privacy Policy</a>
-        <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
-        <div class="row">
-          <a href="privacy_policy.html" class="d-none d-md-inline-block fs-5 col-md-3">Privacy Policy</a>
-          <p class="col-md-6">Website Design by <a href="" target="_blank">Avrey Semadeni</a></p>
-          <div class="col-md-3"></div>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-5 col-md-6 col-lg-4 col-xxl-3 mb-2">
+          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5"><i class="bi bi-telephone me-3 footerAlign"></i><span class="footerAlign">435-245-3978</span></a>
         </div>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-7 col-md-6 col-lg-4 col-xxl-3">
+          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5"><i class="bi bi-buildings me-3"></i><span class="d-inline-block">110 E Main Street<br>Wellsville, UT 84339</span></a>
+        </div>
+        <div class="col-lg-2 col-xxl-3"></div>
       </div>
-    </footer>
+      <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
+      <p>Website Design by <a href="https://avrey-semadeni.netlify.app/" target="_blank">Avrey Semadeni<i class="bi bi-box-arrow-up-right fs-5 ms-2"></i></a></p>
+      <a href="privacy_policy.html" class="fs-5">Privacy Policy</a>
+    </div>
+  </footer>
 
   <script type="module" src="./javascripts/main.js"></script>
 </body>
