--- a/src/services_pricing.html
+++ b/src/services_pricing.html
@@ -19,12 +19,12 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg">
     <div class="container-fluid" id="navContain">
+      <a href="index.html" id="logo" class="me-lg-3">
+        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" id="logo">
-        <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo">
-      </a>
       <div class="collapse navbar-collapse"  id="navbarCollapse">
         <ul class="navbar-nav">
           <li><a href="index.html">Home</a></li>
@@ -37,68 +37,158 @@
     </div>
   </nav>
 
-
   <main class="container my-container mb-5 mt-5">    
     <h1 class="purple-heading">Quilting Services & Prices</h1>
     <p class="mb-5">These are all the quilting services Aleena offers. Feel free to pick and choose the ones you want.</p>
 
-    <div class="service-section">
-      <h2>Freehand Overall Quilting &#40;edge to edge&#41;</h2>
+    <section class="accordion" id="accordionServices" aria-label="Services and Pricing Accordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Freehand Overall Quilting</button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show">
+          <div class="accordion-body">
+            <p class="fw-bold">&dollar;.0175 &dash; &dollar;.025 per square inch, with a minimum of $40.</p>
+            <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 or &dollar;.025 per square inch.</p>
+            <p>Our goal is to reach a fair price for you and us. We time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, we may charge extra.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Custom Quilting</button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <p class="fw-bold">&dollar;40&#47;hour, with a minimum of &dollar;45.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Binding</button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <p class="fw-bold">&dollar;0.175&#47;inch &dash; Machine bind 1 side only.</p>
+            <p class="fw-bold">&dollar;0.25&#47;inch &dash; Machine bind both sides.</p>
+            <p class="fw-bold">&dollar;0.40&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
+            <p>The prices above include us making the binding. You may bring us your own fabric or purchase some from us to make the binding.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Quilt Top Piecing or Fabric Prep</button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <p class="fw-bold">&dollar;40&#47;hour.</p>
+            <p>If you would like us to piece for you, please <a href="contact.html">contact us</a> directly to discuss your project.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Rush Jobs</button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <p class="fw-bold">If you need it in less than 2 weeks, we will charge &dollar;25 additional</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="service-section" aria-labelledby="freehandSect">
+      <h2 id="freehandSect">Freehand Overall Quilting &#40;edge to edge&#41;</h2>
       <p class="service-price">&dollar;.0175 &dash; &dollar;.025 per square inch, with a minimum of $40.</p>
       <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 or &dollar;.025 per square inch.</p>
       <p>Our goal is to reach a fair price for you and us. We time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, we may charge extra.</p>
-    </div>
+    </section>
 
-    <div class="service-section">
-      <h2>Custom Quilting</h2>
+    <section class="service-section" aria-labelledby="customSect">
+      <h2 id="customSect">Custom Quilting</h2>
       <p class="service-price">&dollar;40&#47;hour, with a minimum of &dollar;45.</p>
-    </div>
+    </section>
 
-    <div class="service-section">
-      <h2>Binding</h2>
+    <section class="service-section" aria-labelledby="bindingSect">
+      <h2 id="bindingSect">Binding</h2>
       <div>
         <p class="service-price">&dollar;0.175&#47;inch &dash; Machine bind 1 side only.</p>
         <p class="service-price">&dollar;0.25&#47;inch &dash; Machine bind both sides.</p>
         <p class="service-price">&dollar;0.40&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
       </div>
       <p>The prices above include us making the binding. You may bring us your own fabric or purchase some from us to make the binding.</p>
-    </div>
+    </section>
 
-    <div class="service-section">
-      <h2>Quilt Top Piecing or Fabric Prep</h2>
+    <section class="service-section" aria-labelledby="piecingSect">
+      <h2 id="piecingSect">Quilt Top Piecing or Fabric Prep</h2>
       <p class="service-price">&dollar;40&#47;hour.</p>
       <p>A nice friend or relative of yours will be a better deal for you. However, if you would like us to piece for you, please <a href="contact.html">contact us</a> directly to discuss your project.</p>
-    </div>
+    </section>
 
-    <div class="service-section">
-      <h2>Rush Jobs &#40;Need it in less than 2 weeks&#41;</h2>
-      <p class="service-price">&dollar;25 additional</p>
-    </div>
+    <section class="service-section" aria-labelledby="rushSect">
+      <h2 id="rushSect">Rush Jobs</h2>
+      <p class="service-price">If you need it in less than 2 weeks, we will charge &dollar;25 additional</p>
+    </section> -->
   </main>
 
+
+  <!-- <main class="container my-container mb-5 mt-5">    
+    <h1 class="purple-heading">Quilting Services & Prices</h1>
+    <p class="mb-5">These are all the quilting services Aleena offers. Feel free to pick and choose the ones you want.</p>
+
+    <section class="service-section" aria-labelledby="freehandSect">
+      <h2 id="freehandSect">Freehand Overall Quilting &#40;edge to edge&#41;</h2>
+      <p class="service-price">&dollar;.0175 &dash; &dollar;.025 per square inch, with a minimum of $40.</p>
+      <p>The basic meandering stitch is &dollar;.0175 per square inch, and all other stitches are &dollar;.02 or &dollar;.025 per square inch.</p>
+      <p>Our goal is to reach a fair price for you and us. We time the quilting to determine the overall price. Keep in mind that your quilt top being precise and well prepared can affect the price. If it takes longer than normal, we may charge extra.</p>
+    </section>
+
+    <section class="service-section" aria-labelledby="customSect">
+      <h2 id="customSect">Custom Quilting</h2>
+      <p class="service-price">&dollar;40&#47;hour, with a minimum of &dollar;45.</p>
+    </section>
+
+    <section class="service-section" aria-labelledby="bindingSect">
+      <h2 id="bindingSect">Binding</h2>
+      <div>
+        <p class="service-price">&dollar;0.175&#47;inch &dash; Machine bind 1 side only.</p>
+        <p class="service-price">&dollar;0.25&#47;inch &dash; Machine bind both sides.</p>
+        <p class="service-price">&dollar;0.40&#47;inch &dash; Machine bind 1 side and hand bind the 2nd side.</p>
+      </div>
+      <p>The prices above include us making the binding. You may bring us your own fabric or purchase some from us to make the binding.</p>
+    </section>
+
+    <section class="service-section" aria-labelledby="piecingSect">
+      <h2 id="piecingSect">Quilt Top Piecing or Fabric Prep</h2>
+      <p class="service-price">&dollar;40&#47;hour.</p>
+      <p>A nice friend or relative of yours will be a better deal for you. However, if you would like us to piece for you, please <a href="contact.html">contact us</a> directly to discuss your project.</p>
+    </section>
+
+    <section class="service-section" aria-labelledby="rushSect">
+      <h2 id="rushSect">Rush Jobs &#40;Need it in less than 2 weeks&#41;</h2>
+      <p class="service-price">&dollar;25 additional</p>
+    </section>
+  </main> -->
+
   <footer class="container-fluid">
-    <div class="container text-sm-center">
-      <div class="mb-4 row">
+    <div class="container text-center">
+      <div class="row footerMB">
         <div class="col-lg-2 col-xxl-3">
-          <img src="images/QuiltingBeeWide.jpg" alt="Quilting Bee Logo" class="d-none d-lg-block" height="80px">
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3 mb-2">
-          <i class="bi bi-telephone me-3"></i>
-          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5">435-245-3978</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-5 col-md-6 col-lg-4 col-xxl-3 mb-2">
+          <a href="tel:+14352453978" class="footer-contact pt-2 fs-5"><i class="bi bi-telephone me-3 footerAlign"></i><span class="footerAlign">435-245-3978</span></a>
         </div>
-        <div class="d-flex align-content-center justify-content-sm-center col-12 col-sm-6 col-lg-4 col-xxl-3">
-          <i class="bi bi-buildings me-3"></i>
-          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5">110 E Main Street<br>Wellsville, UT 84339</a>
+        <div class="d-flex align-content-center justify-content-center col-12 col-sm-7 col-md-6 col-lg-4 col-xxl-3">
+          <a href="http://maps.google.com/?q=110 E Main Street, Wellsville, UT 84339" target="_blank" class="footer-contact fs-5"><i class="bi bi-buildings me-3"></i><span class="d-inline-block">110 E Main Street<br>Wellsville, UT 84339</span></a>
         </div>
         <div class="col-lg-2 col-xxl-3"></div>
       </div>
-      <a href="privacy_policy.html" class="d-md-none fs-5">Privacy Policy</a>
       <p class="fw-bold mt-3 fs-4">&copy; Copyright 2024 - The Quilting Bee in Wellsville</p>
-      <div class="row">
-        <a href="privacy_policy.html" class="d-none d-md-inline-block fs-5 col-md-3">Privacy Policy</a>
-        <p class="col-md-6">Website Design by <a href="" target="_blank">Avrey Semadeni</a></p>
-        <div class="col-md-3"></div>
-      </div>
+      <p>Website Design by <a href="https://avrey-semadeni.netlify.app/" target="_blank">Avrey Semadeni<i class="bi bi-box-arrow-up-right fs-5 ms-2"></i></a></p>
+      <a href="privacy_policy.html" class="fs-5">Privacy Policy</a>
     </div>
   </footer>
 
